force-app/main/default/objects/Chat_Hub_Message__e/Chat_Hub_Message__e.object-meta.xml
<CustomObject>
    <label>Chat Hub Message</label>
    <pluralLabel>Chat Hub Messages</pluralLabel>
</CustomObject>