force-app/main/default/objects/Chat_Hub_Message__e/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>New, Edit, Error, Delete</description>
    <label>Action</label>
    <length>50</length>
    <type>Text</type>
</CustomField>