force-app/main/default/objects/Chat_Hub_Message__e/fields/Chat_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Chat_Message_Id__c</fullName>
    <label>Chat Message Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>