force-app/main/default/objects/Chat_Hub_Message__e/fields/From_Event__c.field-meta.xml
<CustomField>
    <fullName>From_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Event</label>
    <type>Checkbox</type>
</CustomField>