force-app/main/default/objects/Chat_Hub_Message__e/fields/Temp_Id__c.field-meta.xml
<CustomField>
    <fullName>Temp_Id__c</fullName>
    <label>Temp Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>