force-app/main/default/objects/Chat_Hub_Message__e/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <label>Text</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>